sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:9: error: ';' expected but double literal found.
      gap=(Int)gap/1.3
                   ^